# CourseMate-AI

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  SECURITY.md  coursemate.sqlite3  pyproject.toml  test.py
app/: main.py
app/bot/: callbacks.py  commands.py  datetime_utils.py  errors.py  handlers.py  keyboards.py  telegram_bot.py
app/canvas/: canvas_client.py  queries.py
app/services/: db.py  models.py  user_store.py
app/ui/: terminal.py
app/utils/: config.py  crypto.py  generate_encryption_secret.py  logging.py  security_patches.py
docs/: canvas-client-api.md  telegram-bot-api.md  telegram-canvas-architecture.md
