[project]
name = "telegrambot"
version = "0.1.0"
description = "Telegram bot project"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "anyio>=4.0.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.6",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.0",
    "cryptography>=42.0.0",
    "pprintpp>=0.4.0",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "ruff>=0.15.6",   # ✅ unified version
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "watchfiles>=0.21.0",
    "types-requests",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["bot", "canvas", "services", "utils", "ui"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true